# audit-workpaper-agent

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
config/: agent_llm_config.json
docs/superpowers/plans/: 2026-05-18-audit-workpaper-frontend.md  2026-05-18-deps-minimize.md
docs/superpowers/specs/: 2026-05-18-audit-workpaper-frontend-design.md
frontend/: .env.example  eslint.config.js  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/upload/: route.ts
frontend/components/thread/: ContentBlocksPreview.tsx  MultimodalPreview.tsx  index.tsx  markdown-styles.css  markdown-text.tsx  utils.ts
frontend/components/thread/messages/: ai.tsx  human.tsx
frontend/components/ui/: button.tsx  sonner.tsx
frontend/hooks/: use-file-upload.tsx
frontend/providers/: Stream.tsx
src/: main.py
src/agents/: agent.py
src/api/: upload.py
src/storage/database/: db.py
src/storage/memory/: memory_saver.py
src/storage/s3/: s3_storage.py
src/tools/: analyze_worksheet.py  check_evidence.py  verify_attachments.py
src/utils/: context.py
