[project]
name = "vibe-coding"
version = "0.1.0"
description = "Coze Vibe Coding project"
requires-python = ">=3.12"
dependencies = [
    "langchain==1.0.3",
    "langchain-openai==1.0.1",
    "langgraph==1.0.2",
    "langgraph-checkpoint==3.0.0",
    "fastapi>=0.121,<1",
    "uvicorn>=0.38,<1",
    "pydantic>=2.12,<3",
    "openpyxl>=3.1,<4",
    "python-pptx>=1.0,<2",
    "chardet>=5.2,<6",
    "requests>=2.31,<3",
    "python-multipart>=0.0.9,<1",
    "python-dotenv>=1.2.2",
]

[tool.uv]
# 使用阿里云镜像作为默认源，替代 pypi.org
[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
